@@ -6,6 +6,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
     id 'org.asciidoctor.jvm.convert' version '4.0.4'
     id "com.epages.restdocs-api-spec" version "0.19.4"
+    id 'org.jetbrains.kotlinx.kover' version '0.9.1'
 }
 
 group = 'ac.dnd'
@@ -76,9 +77,7 @@ dependencies {
     testImplementation 'org.mockito.kotlin:mockito-kotlin:5.1.0'
 
     // Documentation - Springdoc OpenAPI (Swagger UI)
-    implementation("org.springdoc:springdoc-openapi-ui:1.8.0")
-    implementation("org.springdoc:springdoc-openapi-webmvc-core:1.8.0")
-
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
     // Documentation - Spring REST Docs & OpenAPI Spec
     testImplementation("org.springframework.restdocs:spring-restdocs-mockmvc")
     testImplementation("com.epages:restdocs-api-spec-mockmvc:${dependencyManagement.importedProperties['restdocs-api-spec.version'] ?: '0.19.4'}")
@@ -90,6 +89,8 @@ dependencies {
 tasks.named('test') {
     outputs.dir snippetsDir
     useJUnitPlatform()
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
+    environment 'DOCKER_API_VERSION', '1.44'
 }
 
 tasks.register("restDocsTest", Test) {
@@ -97,6 +98,7 @@ tasks.register("restDocsTest", Test) {
     useJUnitPlatform {
         includeTags("restDocs")
     }
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     finalizedBy "asciidoctor"
     finalizedBy "openapi3"
 }
@@ -110,6 +112,7 @@ tasks.named('asciidoctor') {
 }
 
 bootJar {
+    dependsOn asciidoctor
     from("swagger-ui") {
         into "BOOT-INF/classes/static/swagger"
     }
@@ -120,4 +123,17 @@ bootJar {
         into "BOOT-INF/classes/static/swagger"
     }
     archiveFileName.set("app.jar")
+}
+
+kover {
+    reports {
+        filters {
+            excludes {
+                classes(
+                        "ac.dnd.server.DndServerApplication*",
+                        "*.config.*"
+                )
+            }
+        }
+    }
 }
